# voice-journal

./: .gitignore  CLAUDE.md
.claude/: settings.json
agents/: .env.example  README.md  analytics_agent.py  config.py  content_agent.py  support_agent.py
backend/: .env.example  Dockerfile  pyproject.toml
backend/app/: config.py  deps.py  main.py
backend/app/routers/: entries.py  folders.py  insights.py  profiles.py  recordings.py  search.py
backend/app/services/: command_executor.py  intent_classifier.py  summarizer.py  tagger.py  transcription.py
frontend/: package-lock.json  package.json
frontend/public/: manifest.json
frontend/src/app/: globals.css  layout.tsx  providers.tsx
frontend/src/app/insights/: page.tsx
frontend/src/app/journal/: page.tsx
frontend/src/app/journal/[id]/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/search/: page.tsx
frontend/src/app/settings/: page.tsx
frontend/src/components/: AskJournal.tsx  AudioRecorder.tsx  EntryCard.tsx  FolderIcon.tsx  Nav.tsx  Toast.tsx
frontend/src/lib/: api.ts  auth.tsx  mock-data.ts  theme.tsx
scripts/: ingest_dev_recaps.py
scripts/agents/: .env.example  content-poster.sh  researcher.sh  reviewer.sh  run-pipeline.sh  setup-cron.sh  strategist.sh  worker.sh
scripts/agents/posters/: auto-post.sh  linkedin.py  twitter.py
supabase/: schema.sql
supabase/migrations/: 001_folders.sql
