[project]
name = "voice-journal-backend"
version = "0.1.0"
description = "Voice journal backend API"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "httpx>=0.28.0",
    "python-multipart>=0.0.18",
    "supabase>=2.13.0",
    "pydantic-settings>=2.7.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
